RbA Build/src/objects/RMS_Queue_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings that dictate what queue objects will go in.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Work_Order_Queue_Id__c</fullName>
        <label>Install Work Order Queue Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Queue_Id__c</fullName>
        <label>Job Queue Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The name of the Location (Not used in the code, here for ease of use.</description>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Queue_Id__c</fullName>
        <label>Order Queue Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Work_Order_Queue_Id__c</fullName>
        <label>Tech Measure Work Order Queue Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>RMS Queue Settings</label>
</CustomObject>